plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.5'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.ticketing'
version = '0.0.1-SNAPSHOT'
description = 'ticketing-server'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-webmvc'
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'com.mysql:mysql-connector-j'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-actuator-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-data-redis-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-validation-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
    testCompileOnly 'org.projectlombok:lombok'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testAnnotationProcessor 'org.projectlombok:lombok'

    // 수정 후 (깔끔한 코어 라이브러리)
    implementation 'org.redisson:redisson:3.45.0'

    // Spring Security (보안 문지기)
    implementation 'org.springframework.boot:spring-boot-starter-security'

    // JWT (Json Web Token) 발급 및 검증 라이브러리
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'

    // 모니터링 엔진
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
// 프로메테우스 규격으로 데이터 변환
    implementation 'io.micrometer:micrometer-registry-prometheus'

    // 🌟 뒤에 :3.2.4 (또는 현우님 부트 버전)를 붙여서 강제로 경로를 잡아줍니다.
    implementation 'org.springframework.boot:spring-boot-starter-aop:3.2.4'

    // Resilience4j도 버전을 명시해주는 게 안전합니다.
    implementation 'io.github.resilience4j:resilience4j-spring-boot3:2.2.0'

    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml'
}

tasks.named('test') {
    useJUnitPlatform()
}
